--- a/quintero_final_portfolio.qmd
+++ b/quintero_final_portfolio.qmd
@@ -2,7 +2,6 @@
 project:
   type: website
   output-dir: docs
-
 website:
   title: "Ericka Quintero's ePortfolio"
   author: "Ericka Quintero"
@@ -24,92 +23,25 @@ format:
 editor: visual
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code.
+## Data Description
 
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd+Shift+Enter*.
+Queensland monitors wave activity along its coastline using a network of floating buoys that measure wave height, movement, and sea surface conditions. These buoys, stationed at locations such as Cairns in the north and Gold Coast in the south, provide hourly updates that contribute to beach safety, maritime operations, and storm preparedness. While both northern and southern areas experience waves, the Gold Coast and surrounding regions typically see more powerful and consistent swells due to stronger Pacific Ocean currents. Northern waters, particularly near Cairns, tend to be calmer except during cyclones or intense monsoonal weather, when conditions can shift dramatically. This valuable data is sourced from Queensland's official wave monitoring program, available at: <https://www.qld.gov.au/environment/coasts-waterways/beach/monitoring>
+
+## Data Cleaning
+
+To get the data ready for analysis, I first ensured the date formal was consistent and extracted only the date from the full time stamp for easier grouping. I also organized the data by date and location, summarizing wave statistics such as average wave height, peak wave period, and maximum wave height. I filtered out only two locations to represent the north and the south, keeping only data from the Gold Coast and Cairns site. To make the site names easier, I simplified them by removing extra labels. Lastly, I arranged the data by location to make it more structured and ready for further analysis.
+
+## Project
 
 ```{r}
+#| label: data setup
 library(tidyverse)
 library(lubridate)
-wavedata <- read_csv("wave-7dayopdata.csv", skip = 1)
+wavedata <- read_csv("dataraw/wave-7dayopdata.csv", skip = 1)
 ```
 
 ```{r}
-#| label: Northern Queensland Region
-
-northern_queen <- wavedata %>%
-  filter(Site == "Cairns Mk4") %>%
-ggplot + 
-  geom_point(mapping = aes(x= DateTime, y= Hsig)) +
-  labs(x= "DateTime",
-       y= "Significant Wave Height (m)",
-       title= "Average of the Highest Third of Waves — Northern Region Queensland, Australia") +
-   theme_light()
-
-northern_queen
-```
-
-```{r}
-#| label: Southern Queensland Region
-
-southern_queen <- wavedata %>%
-  filter(Site == "Gold Coast Mk4") %>%
-ggplot + 
-  geom_point(mapping = aes(x=DateTime, y= Hsig)) +
-  labs(x= "DateTime",
-       y= "Significant Wave Height (m)",
-       title= "Average of the Highest Third of Waves — Southern Region Queensland, Australia") +
-   theme_light()
-
-(southern_queen)
-```
-
-```{r}
-#| label: maximum wave height 
-wavedata %>%
-  filter(Site %in% c("Cairns Mk4", "Gold Coast Mk4")) %>%
-  ggplot(aes(x = Site, y = Hmax)) +
-  geom_boxplot(fill = "lavenderblush",
-               color = "slateblue") +
-  labs(title = "Maximum Wave Height (m) in Northern and Southern Queensland Regions",
-       x = "Site",
-       y = "Hmax (m)") +
-  theme_light() +
-  coord_flip()
-
-
-```
-
-```{r}
-#| label: peak energy period 
-wavedata %>%
-  filter(Site %in% c("Gold Coast Mk4", "Cairns Mk4")) %>%
-  ggplot(aes(x = Site, y = Tp)) +
-  geom_boxplot(fill = "lavender",
-               color = "midnightblue") +
-  labs(title = "Peak Energy Wave Period in Northern and Southern Queensland Regions",
-       x = "Site",
-       y = "Time Period (hour)") +
-  theme_light() +
-  coord_flip()
-```
-
-```{r}
-#| label: sea surface temperature
-wavedata %>%
-  filter(Site %in% c("Gold Coast Mk4", "Cairns Mk4")) %>%
-  ggplot(aes(x = Site, y = SST)) +
-  geom_boxplot(fill= "lemonchiffon",
-               color= "forestgreen") +
-  labs(title = "Sea Surface Temperature in Northern and Southern Queensland Regions",
-       x = "Site",
-       y = "SST (°C)") +
-  theme_light() +
-  coord_flip()
-```
-
-```{r}
-#| label: data cleaning
+#| label: data-cleaning
 
 queensland_wave <- wavedata %>%
   mutate(DateTime = lubridate::ymd_hms(format(DateTime, format = "%Y-%m-%d %T %Z")),
@@ -125,20 +57,12 @@ filter(Site %in% c("Gold Coast Mk4", "Cairns Mk4")) %>%
                "Cairns Mk4" = "Cairns")) %>%
   arrange(Site)
 
-queensland_wave %>% 
-  pivot_longer(cols = contains("wave"),
-               names_to = "wave_height",
-               values_to = "wave_calc") %>%
-  filter(wave_height != "peakwave") %>%
-  ggplot(aes(x= date,
-             y= wave_calc,
-             group= wave_height,
-             color= wave_height)) +
-  geom_point() +
-  facet_wrap(~Site)
+write_csv(queensland_wave, "dataclean/queensland_wave_clean")
 ```
 
 ```{r}
-wavedata %>% 
-  distinct(Site)
+
 ```
+
+
+
